<resources>
    <string name="app_name">WakeMeUp</string>
    <string name="start_note">sart notif</string>
    <string name="cancel_note">cancel notif</string>
    <string name="update_note">update notif</string>
    <string name="big_notification">big notif</string>
    <string name="titleMenuParam">À propos…</string>
    <string name="buttonSetAlarm">Programmer l\'alarme</string>
    <string name="buttonEndAlarm">Arrêter l\'alarme</string>
    <string name="legendetext">Veuillez sélectionner une heure</string>
    <string name="AddTask">Ajouter</string>
    <string name="SeeTaskOfTheDay">Aujourd\'hui</string>
    <string name="addText">Réveil</string>
    <string name="t_ches">Tâches</string>
    <string name="call">Appeler</string>
    <string name="StopAlarm">Arrêter l\'alarme</string>
    <string name="app_main">Vos tâches de la journée</string>
    <string name="editTask">Modifier la tâche</string>
    <string name="deuxpoints">:</string>
    <string name="slash">/</string>
    <string name="enter_text">Ecrire du texte</string>
    <string name="text_to_speech">Text to Speech</string>
</resources>
