<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:transitionGroup="true"
    android:background="@color/colorBackTask">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:id="@+id/logoImg" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addText"
        android:textSize="20sp"
        android:textColor="@color/colorTextTask"
        android:id="@+id/AlarmPageButton"
        android:layout_above="@+id/gotoMyList"
        android:width="190dp"
        android:height="190dp"
        android:onClick="gotoAlarm"
        android:drawableTop="@drawable/alarmclock"
        android:paddingTop="30dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t_ches"
        android:textSize="20sp"
        android:textColor="@color/colorTextTask"
        android:id="@+id/TaskButton"
        android:layout_above="@+id/gotoTask"
        android:width="190dp"
        android:height="190dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="gotoTask"

        android:drawableTop="@drawable/tasks"
        android:paddingTop="30dp"/>

    <Button
        android:text="@string/AddTask"
        android:textSize="20sp"
        android:textColor="@color/colorTextTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gotoTask"
        android:onClick="gotoAddTask"
        android:width="190dp"
        android:height="190dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:drawableTop="@drawable/tasks"
        android:paddingTop="30dp"/>
    <Button
        android:text="@string/SeeTaskOfTheDay"
        android:textSize="20sp"
        android:textColor="@color/colorTextTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gotoMyList"
        android:onClick="gotoTaskOfTheDay"
        android:width="190dp"
        android:height="190dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:drawableTop="@drawable/tasks"
        android:paddingTop="30dp"/>

</RelativeLayout>