<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_alarm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackTask"
    tools:context="com.example.schmid_charlesa_esig.wakemeup.AlarmActivity">
    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/timePicker"
        android:headerBackground="@color/colorTextTask"
        android:numbersSelectorColor="@color/colorTextTask"/>

    <Button
        android:text="@string/buttonSetAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timePicker"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/rounded_buttonmain"
        android:textColor="@color/colorTextTask"
        android:id="@+id/setAlarm"/>

    <Button
        android:text="@string/buttonEndAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timePicker"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/rounded_buttonmain"
        android:textColor="@color/colorTextTask"
        android:id="@+id/endAlarm"/>

    <TextView
        android:text="@string/legendetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/endAlarm"
        android:layout_centerHorizontal="true"

        android:textColor="@color/colorTextTask"
        android:id="@+id/updateText"/>
</RelativeLayout>
