<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_set_detail_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.schmid_charlesa_esig.wakemeup.SetDetailTaskActivity">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setnameTask"
        android:inputType="text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setnameTask"
        android:id="@+id/setdescTask"
        android:inputType="text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setdescTask"
        android:id="@+id/setdayTask"
        android:inputType="number" />
    <TextView
        android:text="@string/slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/setdayTask"
        android:layout_toEndOf="@id/setdayTask"
        android:layout_below="@id/setdescTask"
        android:id="@+id/slasher1"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/slasher1"
        android:layout_toEndOf="@id/slasher1"
        android:layout_below="@id/setdescTask"
        android:id="@+id/setmonthTask"
        android:inputType="number" />
    <TextView
        android:text="@string/slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/setmonthTask"
        android:layout_toEndOf="@id/setmonthTask"
        android:layout_below="@id/setdescTask"
        android:id="@+id/slasher2"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setdescTask"
        android:layout_toRightOf="@id/slasher2"
        android:layout_toEndOf="@id/slasher2"
        android:id="@+id/setyearTask"
        android:inputType="number" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setyearTask"
        android:id="@+id/sethourTask"
        android:inputType="number" />
    <TextView
        android:text="@string/deuxpoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/sethourTask"
        android:layout_toEndOf="@id/sethourTask"
        android:layout_below="@id/setyearTask"
        android:id="@+id/deuxpoints"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/deuxpoints"
        android:layout_toEndOf="@id/deuxpoints"
        android:layout_below="@id/setyearTask"
        android:id="@+id/setminuteTask"
        android:inputType="number" />
    <Button
        android:text="@string/editTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sethourTask"
        android:id="@+id/btnDetailTask" />
</RelativeLayout>
